fixed spacing issues

--- a/tests/css/tests.css
+++ b/tests/css/tests.css
@@ -35,6 +35,7 @@
 .description{
     margin-left: 3.5em;
     margin-top: .5em;
+    width: 80%;
 }
 
 h2 {
@@ -59,10 +60,10 @@ iframe {
     overflow: hidden;
 }
 
- .group-header .ui-state-confirmation .ui-icon,
- .group-header .ui-state-highlight .ui-icon,
- .group-header .ui-state-error .ui-icon,
- .group-header .ui-state-warning .ui-icon,
+.group-header .ui-state-confirmation .ui-icon,
+.group-header .ui-state-highlight .ui-icon,
+.group-header .ui-state-error .ui-icon,
+.group-header .ui-state-warning .ui-icon,
 .item-header .ui-state-confirmation .ui-icon,
 .item-header .ui-state-highlight .ui-icon,
 .item-header .ui-state-error .ui-icon,
@@ -82,6 +83,7 @@ iframe {
 .item-header .ui-state-warning .title {
     position: relative;
     margin-left: 0.5em;
+    width: 80%;
 }
 
 
